--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
@@ -6,7 +6,7 @@
 	
 <th:block layout:fragment="content">	
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_PARTS_NO}"></div><!-- Parts No. -->
+		<div class="block-title" th:text="#{HQPD_T_PART_NO}"></div><!-- Part No. -->
 		<div class="block-button-area">
 			<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->
 		</div>	
@@ -16,10 +16,10 @@
 	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{HQPD_L_PARTS_NO}"></th><!--Parts No.  -->
+				<th th:text="#{HQPD_L_PART_NO}"></th><!-- Part No.  -->
 				<td>			
 					<div class="input-area">			
-						<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui" th:value="${pPartsNo}" style="text-transform: uppercase;">
+						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}" style="text-transform: uppercase;">
 					</div> 										
 				</td>
 			</tr>
@@ -27,7 +27,7 @@
 				<th th:text="#{HQPD_L_DESCRIPTION}"></th><!--Description  -->
 				<td>
 					<div class="input-area">			
-						<input type="text" id="pPartsNoDesc" name="pPartsNoDesc" class="custom-ui" th:value="${pPartsNoDesc}">
+						<input type="text" id="pPartDesc" name="pPartDesc" class="custom-ui" th:value="${pPartDesc}">
 					</div>							
 				</td>			
 			</tr>		
@@ -50,9 +50,9 @@
 	let $tableObj;
 	
 	$(function(){
-		$("#pPartsNo, #pPartsNoDesc").on("keydown", function(event) {
+		$("#pPartNo, #pPartDesc").on("keydown", function(event) {
 			
-			$("#pPartsNo").val($("#pPartsNo").val().toUpperCase());
+			$("#pPartNo").val($("#pPartNo").val().toUpperCase());
 			
 			if (event.keyCode == 13)
 			{
@@ -66,7 +66,6 @@
 		    },
 			ordering: true, 
 			scrollY: 100,
-	//		fixedColumns: { leftColumns: 1 },
 			columns: [
 				{// 컬럼에 radio 설정
 					name: "RAD_MATNR",
@@ -82,16 +81,15 @@
 						return '<input type="radio" name="RAD_MATNR" id="RAD_MATNR" class="custom-ui" value="' + row.MATNR + '" onclick="clickParts(this)"><label for="RAD_MATNR"></label>';// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
-				{name: "MATNR", data: "MATNR", title: "[[#{HQPD_L_PARTS_NO}]]"},		//Parts No. 
+				{name: "MATNR", data: "MATNR", title: "[[#{HQPD_L_PART_NO}]]"},		//Part No. 
 				{name: "MAKTX", data: "MAKTX", title: "[[#{HQPD_L_DESCRIPTION}]]"}	//Description	
 			],
 			ajax: {
-				url: "/portal/scm/parts/domestic/info/parts_number_popup_list/data",
-				type: "POST",
+				url: "/portal/iv/hq/parts/domestic/info/popup/part_search/data",
 				data: function(p)
 				{				
-					p.pPartsNo = $("#pPartsNo").val();
-					p.pPartsNoDesc = $("#pPartsNoDesc").val();
+					p.pPartNo = $("#pPartNo").val();
+					p.pPartDesc = $("#pPartDesc").val();
 				},
 				dataSrc: function(response) 
 				{				
