--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
@@ -157,7 +157,7 @@
 			
 		$("#BTN_download").on("click", function() {
 			let gridFileDownload = new GridFileDownload($tableObj);
-			gridFileDownload.fileName = "delivery_status_detail";
+			gridFileDownload.fileName = "Delivery_Status_Detail";
 			gridFileDownload.excelDownload();
 		});
 		
