--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/view.html
@@ -69,7 +69,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<form id="FORM_search" name="FORM_search" action="/portal/iv/hq/parts/domestic/order/display/inquiry_list">
+	<form id="FORM_search" name="FORM_search" action="/portal/iv/hq/parts/domestic/order/display/inquiry/list">
 		<input type="hidden" name="pDocType" th:value="${pDocType}">
 		<input type="hidden" name="pOrderType" th:value="${pOrderType}">
 		<input type="hidden" name="pOrderNo" th:value="${pOrderNo}">
@@ -88,7 +88,7 @@
 
 $(function(){
 	$.ajax({
-		url: "/portal/iv/hq/parts/domestic/order/display/inquiry_view/data",		
+		url: "/portal/iv/hq/parts/domestic/order/display/inquiry/view/data",		
 		data: {"orderNo": "[[${orderNo}]]", "docType": "[[${pDocType}]]"},
 	    success: function(response, textStatus, jqXHR) 
 	    {
@@ -150,7 +150,7 @@ $(function(){
 	});
 	
 	$("#BTN_pdfDownload").on("click", function() {
-		document.location.href = "/portal/iv/hq/parts/domestic/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=BT08";
+		document.location.href = "/portal/iv/hq/parts/domestic/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=BT08";
 	});	
 	
 	$("#BTN_back").on("click", function() {
@@ -159,7 +159,7 @@ $(function(){
 	
 	$("#BTN_download").on("click", function() {
 		let gridFileDownload = new GridFileDownload($tableObj);
-		gridFileDownload.fileName = "inquiry_list";
+		gridFileDownload.fileName = "Inquiry_List";
 		gridFileDownload.excelDownload();
 	});
 	
@@ -189,7 +189,7 @@ function doTransferOrder(orderType)
 	    		
 	    		alert(message);
 	    		
-	    		document.location.href = "/portal/iv/hq/parts/domestic/order/display/order_view?orderNo=" + orderNo;
+	    		document.location.href = "/portal/iv/hq/parts/domestic/order/display/order/view?orderNo=" + orderNo;
 	    	}
 	    	else
 	    	{
