--- a/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
@@ -12,12 +12,11 @@
 <script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
-<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
-<script th:src="@{/portal/js/jWebppy.utils.download.js}"></script>
-<script th:src="@{/portal/js/jWebppy.utils.dateformat.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
-<script th:src="@{/portal/js/portal.utils.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
+<script th:src="@{/portal/js/semantic/semantic.min.js}"></script>
